--- a/src/lab/css/override.css
+++ b/src/lab/css/override.css
@@ -4,3 +4,10 @@ span.term {
    font-weight: bold;
    color: #556B2F;
 }
+.content img
+{
+/*	width:100%;
+	height:100%; 
+	padding-left:10px;
+	padding-bottom:10px; */
+}
