--- a/src/themes/blue-icon/css/default.css
+++ b/src/themes/blue-icon/css/default.css
@@ -273,3 +273,11 @@ color: #444 !important; text-shadow: none; }
           -ms-text-size-adjust:none; } 
 }
 
+#lab-footer, .footer {
+	float:left;
+	margin-top: 50px;
+	margin-bottom: 100px;
+	text-align: center;
+	
+ width: 90%;
+}
